tests/paczka1/fuzzy1/27733060.err
Error in line 2: pn8sn A92 46,6
Error in line 15: A145 A163 66,8
